added references and some text

--- a/01_attenuation_based_imaging.ipynb
+++ b/01_attenuation_based_imaging.ipynb
@@ -23,11 +23,18 @@
    "source": [
     "# Attenuation-based X-ray imaging\n",
     "\n",
-    "The physics of conventional imaging\n",
+    "X-rays have been used for imaging from their very discovery by Wilhelm Röntgen in late 1895. More than 125 years later, X-ray imaging is still conducted in the same way as Röntgen's first experiments (in broad terms). Conventional attenuation-based X-ray imaging is a fine starting point to get acquainted with the fundamentals of X-ray physics.\n",
     "\n",
-    "![An early X-ray radiograph produced by Wilhelm Röntgen](https://upload.wikimedia.org/wikipedia/commons/8/84/X-ray_by_Wilhelm_R%C3%B6ntgen_of_Albert_von_K%C3%B6lliker%27s_hand_-_18960123-01.jpg)\n",
     "\n",
-    "Conventional X-ray contrast comes from the inhomogeneity in attenuating properties of materials.  \n"
+    "```{figure} https://upload.wikimedia.org/wikipedia/commons/8/84/X-ray_by_Wilhelm_R%C3%B6ntgen_of_Albert_von_K%C3%B6lliker%27s_hand_-_18960123-01.jpg\n",
+    "---\n",
+    "height: 300px\n",
+    "name: fig:xray-hand\n",
+    "---\n",
+    "An early X-ray radiograph produced by Wilhelm Röntgen\n",
+    "```\n",
+    "\n",
+    "Conventional X-ray contrast comes from the inhomogeneity in attenuating properties of materials.\n"
    ]
   },
   {
@@ -46,7 +53,9 @@
     "\n",
     "$$\\mu = \\rho_1 \\frac{N_A}{m_1} \\sigma_1 + \\rho_2 \\frac{N_A}{m_2} \\sigma_2 + \\dots$$\n",
     "\n",
-    "The ratio $\\mu/\\rho$ of a pure atomic substance is called the mass attenuation coefficient, which values as a function of photon energy can be calculated and tabulated.\n"
+    "The ratio $\\mu/\\rho$ of a pure atomic substance is called the mass attenuation coefficient, which values as a function of photon energy can be calculated and tabulated.\n",
+    "\n",
+    "{cite}`xdb2009, AlsNielsen2011, Attwood2000soft`"
    ]
   },
   {
@@ -54,7 +63,7 @@
    "execution_count": 30,
    "metadata": {
     "tags": [
-     "hide-input"
+     "remove-input"
     ]
    },
    "outputs": [
@@ -93,7 +102,11 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -133,120 +146,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.267"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import xraydb\n",
-    "xraydb.atomic_density('C')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\u001b[0;31mSignature:\u001b[0m \u001b[0mmaterial_mu\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0menergy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdensity\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkind\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'total'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-       "\u001b[0;31mSource:\u001b[0m   \n",
-       "\u001b[0;32mdef\u001b[0m \u001b[0mmaterial_mu\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0menergy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdensity\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkind\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'total'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0;34m\"\"\"X-ray attenuation length (in 1/cm) for a material by name or formula\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m    Args:\u001b[0m\n",
-       "\u001b[0;34m        name (str): chemical formul or name of material from materials list.\u001b[0m\n",
-       "\u001b[0;34m        energy (float or ndarray):   energy or array of energies in eV\u001b[0m\n",
-       "\u001b[0;34m        density (None or float):  material density (gr/cm^3).\u001b[0m\n",
-       "\u001b[0;34m        kind (str): 'photo' or 'total' for whether to return the\u001b[0m\n",
-       "\u001b[0;34m                    photo-absorption or total cross-section ['total']\u001b[0m\n",
-       "\u001b[0;34m    Returns:\u001b[0m\n",
-       "\u001b[0;34m        absorption length in 1/cm\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m    Notes:\u001b[0m\n",
-       "\u001b[0;34m        1.  material names are not case sensitive,\u001b[0m\n",
-       "\u001b[0;34m            chemical compounds are case sensitive.\u001b[0m\n",
-       "\u001b[0;34m        2.  mu_elam() is used for mu calculation.\u001b[0m\n",
-       "\u001b[0;34m        3.  if density is None and material is known, that density will be used.\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m    Examples:\u001b[0m\n",
-       "\u001b[0;34m        >>> material_mu('H2O', 10000.0)\u001b[0m\n",
-       "\u001b[0;34m        5.32986401658495\u001b[0m\n",
-       "\u001b[0;34m    \"\"\"\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0;32mglobal\u001b[0m \u001b[0m_materials\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0;32mif\u001b[0m \u001b[0m_materials\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m        \u001b[0m_materials\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_read_materials_db\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mformula\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0m_density\u001b[0m  \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mmater\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_materials\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0;32mif\u001b[0m \u001b[0mmater\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m        \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval\u001b[0m \u001b[0;32min\u001b[0m \u001b[0m_materials\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m            \u001b[0;32mif\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mval\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;31m# match formula\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m                \u001b[0mmater\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mval\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m                \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0;31m# default to using passed in name as a formula\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0;32mif\u001b[0m \u001b[0mformula\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m        \u001b[0;32mif\u001b[0m \u001b[0mmater\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m            \u001b[0mformula\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m        \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m            \u001b[0mformula\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmater\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformula\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0;32mif\u001b[0m \u001b[0mdensity\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mmater\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m        \u001b[0mdensity\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmater\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdensity\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0;32mif\u001b[0m \u001b[0mdensity\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m        \u001b[0;32mraise\u001b[0m \u001b[0mWarning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'material_mu(): must give density for unknown materials'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mmass_tot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmu\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.0\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0;32mfor\u001b[0m \u001b[0melem\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfrac\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mchemparse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mformula\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m        \u001b[0mmass\u001b[0m  \u001b[0;34m=\u001b[0m \u001b[0mfrac\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0matomic_mass\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0melem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m        \u001b[0mmu\u001b[0m   \u001b[0;34m+=\u001b[0m \u001b[0mmass\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mmu_elam\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0melem\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0menergy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkind\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mkind\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m        \u001b[0mmass_tot\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mmass\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0;32mreturn\u001b[0m \u001b[0mdensity\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mmu\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mmass_tot\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-       "\u001b[0;31mFile:\u001b[0m      ~/.local/lib/python3.10/site-packages/xraydb/materials.py\n",
-       "\u001b[0;31mType:\u001b[0m      function\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "material_mu??"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Simulate the radiograph of a sample made of a few different materials\n",
-    "# a) in the case of a monochromatic incident illumination (20 keV)\n",
-    "# b) in the case where the spectrum is a Gaussian distribution centered at 20 keV\n",
-    "# and with sigma=4 keV\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -270,6 +169,13 @@
     "\n",
     "Synchrotron radiation is emitted by relativistic electrons accelerating in the direction transverse to their velocity, most commonly under the effect of a magnetic field. The relativistic effects concentrate the radiation in a small forward cone. \n",
     "\n",
+    "{cite}`xdb2009, AlsNielsen2011, Attwood2000soft`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### The effect of source size in X-ray imaging\n",
     "\n",
     "The measured image is a convolution of the ideal image with the demagnified image of the source on the detector. Source blurring goes from negligible or dominant depending on the geometry and detector properties. \n",
@@ -279,25 +185,31 @@
     "\n",
     "### The effect of polychromaticity in X-ray imaging\n",
     "\n",
-    "The measured image is a convolution of the ideal image with the demagnified image of the source on the detector. Source blurring goes from negligible or dominant depending on the geometry and detector properties. \n",
-    "\n"
+    "The measured image is a convolution of the ideal image with the demagnified image of the source on the detector. Source blurring goes from negligible or dominant depending on the geometry and detector properties. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Idea to illustrate the effect of beam hardening\n",
+    "# Simulate the radiograph of a sample made of a few different materials\n",
+    "# a) in the case of a monochromatic incident illumination (20 keV)\n",
+    "# b) in the case where the spectrum is a Gaussian distribution centered at 20 keV\n",
+    "# and with sigma=4 keV"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data processing with simple radiographs\n",
-    "\n",
-    "Example of loading frames with flat and dark correction."
+    "```{bibliography}\n",
+    ":style: unsrt\n",
+    ":filter: docname in docnames\n",
+    "```"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
