--- a/02_phase_contrast.ipynb
+++ b/02_phase_contrast.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "# X-ray phase contrast\n",
     "\n",
-    "General introduction of X-ray phase-contrast methods"
+    "General introduction to X-ray phase-contrast methods"
    ]
   },
   {
@@ -39,14 +39,18 @@
     "\n",
     "Angular spectrum formulation, Huygens-Fresnel integral\n",
     "\n",
-    "Transport of intensities\n",
+    "{cite}`Guigay1977`\n",
+    "\n",
+    "Transport of intensities {cite}`Teague1983`\n",
     "\n",
     "### X-ray propagation through matter\n",
     "\n",
     "In general rather complicated. Multiple approximation regimes are possible.\n",
     "* Born series\n",
     "* Projection approximation\n",
-    "* Rytov series"
+    "* Rytov series\n",
+    "\n",
+    "{cite}`Goodman2005,Born1999,Paganin2006`"
    ]
   },
   {
@@ -59,10 +63,15 @@
     "\n",
     "Transport of intensities with a single material assumption\n",
     "\n",
+    "{cite}`Paganin2002`\n",
     "\n",
     "### In-line holography\n",
     "\n",
-    "\n"
+    "Digital Inline\n",
+    "\n",
+    "Linearization of transmittance function -> contrast transfer function formalism \n",
+    "\n",
+    "{cite}`Cloetens1999,Rosenhahn2009`\n"
    ]
   },
   {
@@ -75,17 +84,21 @@
     "\n",
     "### Longitudinal coherence - polychromaticity\n",
     "\n",
+    "For X-rays, different wavelengths normally have no phase relationships. As a consequence all measurements made with polychromatic x-rays are simply the sum, in intensity, of all the indidual frequency components. This consideration is still compatible with the concept of \"longitudinal coherence\", which quantifies the lenthscales over which a wavefield can interfere with itself along the propagation direction. For imaging purposes, this \n",
     "\n",
     "### Transverse coherence - mutual intensity\n",
     "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "```{bibliography}\n",
+    ":style: unsrt\n",
+    ":filter: docname in docnames\n",
+    "```"
+   ]
   },
   {
    "cell_type": "code",
