--- a/03_modulation_methods.ipynb
+++ b/03_modulation_methods.ipynb
@@ -29,14 +29,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Grating-based imaging"
+    "## Grating-based imaging\n",
+    "{cite}`Weitkamp2005,Pfeiffer2008`\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Patterned illuminations"
+    "## Patterned illuminations\n",
+    "{cite}`Morgan2012,Berujon2012,Zdora2017,Zdora2018a`\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{bibliography}\n",
+    ":style: unsrt\n",
+    ":filter: docname in docnames\n",
+    "```"
    ]
   },
   {
