--- a/references.bib
+++ b/references.bib
@@ -1,56 +1,162 @@
----
----
-
-@inproceedings{holdgraf_evidence_2014,
-	address = {Brisbane, Australia, Australia},
-	title = {Evidence for {Predictive} {Coding} in {Human} {Auditory} {Cortex}},
-	booktitle = {International {Conference} on {Cognitive} {Neuroscience}},
-	publisher = {Frontiers in Neuroscience},
-	author = {Holdgraf, Christopher Ramsay and de Heer, Wendy and Pasley, Brian N. and Knight, Robert T.},
-	year = {2014}
+@book{AlsNielsen2011,
+  title        = {{Elements of modern X-ray physics}},
+  author       = {Als-Nielsen, Jens and McMorrow, Des},
+  year         = 2011,
+  publisher    = {Wiley},
+}
+@book{Born1999,
+  title        = {{Principles of Optics: Electromagnetic Theory of
+    Propagation, Interference and Diffraction of Light}},
+  author       = {Born, Max and Wolf, Emil},
+  year         = 1999,
+  publisher    = {Cambridge University Press},
+  edition      = {7th},
+}
+@article{Cloetens1999,
+  title        = {{Holotomography: Quantitative phase tomography with
+    micrometer resolution using hard synchrotron radiation x rays}},
+  author       = {Cloetens, Peter and Ludwig, W and Baruchel, José and {Van Dyck}, D and {Van Landuyt}, J and Guigay, J P and Schlenker, Michel},
+  year         = 1999,
+  journal      = {Appl. Phys. Lett.},
+  volume       = 75,
+  pages        = 2912,
+}
+@article{Paganin2002,
+  title        = {{Simultaneous phase and amplitude extraction from a single defocused image of a homogeneous object.}},
+  author       = {Paganin, D and Mayo, S C and Gureyev, T E and Miller, P R and Wilkins, S W},
+  year         = 2002,
+  month        = apr,
+  journal      = {J. Microsc.},
+  volume       = 206,
+  number       = {Pt 1},
+  pages        = {33--40},
+  issn         = {0022-2720},
+}
+@article{Rosenhahn2009,
+  title        = {{Digital In-line Holography with femtosecond VUV radiation provided by the free-electron laser FLASH}},
+  author       = {Rosenhahn, A and Staier, F and Nisius, T and Schäfer, D and Barth, R and Christophis, C and Stadler, L M and Streit-Nierobisch, S and Gutt, C and Mancuso, A P and Others},
+  year         = 2009,
+  journal      = {Opt. Express},
+  publisher    = {OSA},
+  volume       = 17,
+  number       = 10,
+  pages        = {8220--8228},
+  doi          = {10.1364/oe.17.008220},
+}
+@book{xdb2009,
+  title        = {X-ray data booklet},
+  author       = {A. C. Thompson and J. Kirz and D. T. Attwood and E. M. Gullikson and M. R. Howells and J. B. Kortright and Y. Liu and A. L. Robinson and J. Underwood and K.-J. Kim and I. Lindau and P. Pianetta and H. Winick and G. P. Williams and J. H. Scofield},
+  year         = 2009,
+  publisher    = {Lawrence Berkeley National Laboratory},
+}
+@book{Attwood2000soft,
+  title        = {Soft x-rays and extreme ultraviolet radiation: principles and applications},
+  author       = {Attwood, David},
+  year         = 2000,
+  publisher    = {Cambridge university press},
+}
+@book{Goodman2005,
+  title        = {Introduction to Fourier optics},
+  author       = {Goodman, Joseph W},
+  year         = 2005,
+  publisher    = {Roberts and Company publishers},
+}
+@book{Paganin2006,
+  title        = {Coherent X-ray optics},
+  author       = {Paganin, David},
+  number       = 6,
+  year         = 2006,
+  publisher    = {Oxford University Press, USA},
+}
+@article{Teague1983,
+  title        = {{Deterministic phase retrieval: a Green's function solution}},
+  author       = {Teague, Michael R},
+  year         = 1983,
+  month        = {nov},
+  journal      = {J. Opt. Soc. Am.},
+  volume       = 73,
+  number       = 11,
+  pages        = 1434,
+  doi          = {10.1364/JOSA.73.001434},
+  issn         = {0030-3941},
+}
+@article{Guigay1977,
+  title={Fourier-transform analysis of Fresnel diffraction patterns and in-line holograms},
+  author={Guigay, Jean-Pierre},
+  journal={Optik},
+  volume={49},
+  pages={121--125},
+  year={1977}
 }
 
-@article{holdgraf_rapid_2016,
-	title = {Rapid tuning shifts in human auditory cortex enhance speech intelligibility},
-	volume = {7},
-	issn = {2041-1723},
-	url = {http://www.nature.com/doifinder/10.1038/ncomms13654},
-	doi = {10.1038/ncomms13654},
-	number = {May},
-	journal = {Nature Communications},
-	author = {Holdgraf, Christopher Ramsay and de Heer, Wendy and Pasley, Brian N. and Rieger, Jochem W. and Crone, Nathan and Lin, Jack J. and Knight, Robert T. and Theunissen, Frédéric E.},
-	year = {2016},
-	pages = {13654},
-	file = {Holdgraf et al. - 2016 - Rapid tuning shifts in human auditory cortex enhance speech intelligibility.pdf:C\:\\Users\\chold\\Zotero\\storage\\MDQP3JWE\\Holdgraf et al. - 2016 - Rapid tuning shifts in human auditory cortex enhance speech intelligibility.pdf:application/pdf}
+@article{Zdora2017,
+ title = {X-ray Phase-Contrast Imaging and Metrology through Unified Modulated Pattern Analysis},
+ author = {Zdora, Marie-Christine and Thibault, Pierre and Zhou, Tunhe and Koch, Frieder J. and Romell, Jenny and Sala, Simone and Last, Arndt and Rau, Christoph and Zanette, Irene},
+ doi = {10.1103/physrevlett.118.203903},
+ issn = {1079-7114},
+ journal = {Phys. Rev. Lett.},
+ month = {May},
+ number = {20},
+ volume = {118},
+ year = {2017}
+}
+@article{Pfeiffer2008,
+  title        = {{Hard-X-ray dark-field imaging using a grating interferometer}},
+  author       = {Pfeiffer, Franz and Bech, Martin and Bunk, Oliver and Kraft, Philipp and Eikenberry, Eric F and Brönnimann, Christian and Grünzweig, Christian and David, Christian},
+  year         = 2008,
+  month        = {feb},
+  journal      = {Nat. Mater.},
+  publisher    = {Springer Science and Business Media {LLC}},
+  volume       = 7,
+  number       = 2,
+  pages        = {134--137},
+  doi          = {10.1038/nmat2096},
+}
+@article{Weitkamp2005,
+  title        = {{X-ray phase imaging with a grating interferometer}},
+  author       = {Weitkamp, Timm and Diaz, Ana and David, Christian and Pfeiffer, Franz and Stampanoni, M and Cloetens, Peter and Ziegler, E},
+  year         = 2005,
+  journal      = {Opt. Express},
+  publisher    = {OSA},
+  volume       = 13,
+  number       = 16,
+  pages        = {6296--6304},
+  doi          = {10.1364/OPEX.13.006296},
 }
 
-@inproceedings{holdgraf_portable_2017,
-	title = {Portable learning environments for hands-on computational instruction using container-and cloud-based technology to teach data science},
-	volume = {Part F1287},
-	isbn = {978-1-4503-5272-7},
-	doi = {10.1145/3093338.3093370},
-	abstract = {© 2017 ACM. There is an increasing interest in learning outside of the traditional classroom setting. This is especially true for topics covering computational tools and data science, as both are challenging to incorporate in the standard curriculum. These atypical learning environments offer new opportunities for teaching, particularly when it comes to combining conceptual knowledge with hands-on experience/expertise with methods and skills. Advances in cloud computing and containerized environments provide an attractive opportunity to improve the effciency and ease with which students can learn. This manuscript details recent advances towards using commonly-Available cloud computing services and advanced cyberinfrastructure support for improving the learning experience in bootcamp-style events. We cover the benets (and challenges) of using a server hosted remotely instead of relying on student laptops, discuss the technology that was used in order to make this possible, and give suggestions for how others could implement and improve upon this model for pedagogy and reproducibility.},
-	booktitle = {{ACM} {International} {Conference} {Proceeding} {Series}},
-	author = {Holdgraf, Christopher Ramsay and Culich, A. and Rokem, A. and Deniz, F. and Alegro, M. and Ushizima, D.},
-	year = {2017},
-	keywords = {Teaching, Bootcamps, Cloud computing, Data science, Docker, Pedagogy}
+@article{Berujon2012,
+  title        = {{Two-Dimensional X-Ray Beam Phase Sensing}},
+  author       = {Bérujon, Sébastien and Ziegler, Eric and Cerbino, Roberto and Peverini, Luca},
+  year         = 2012,
+  month        = {apr},
+  journal      = {Phys. Rev. Lett.},
+  publisher    = {American Physical Society ({APS})},
+  volume       = 108,
+  number       = 15,
+  pages        = {1--5},
+  doi          = {10.1103/physrevlett.108.158102},
 }
 
-@article{holdgraf_encoding_2017,
-	title = {Encoding and decoding models in cognitive electrophysiology},
-	volume = {11},
-	issn = {16625137},
-	doi = {10.3389/fnsys.2017.00061},
-	abstract = {© 2017 Holdgraf, Rieger, Micheli, Martin, Knight and Theunissen. Cognitive neuroscience has seen rapid growth in the size and complexity of data recorded from the human brain as well as in the computational tools available to analyze this data. This data explosion has resulted in an increased use of multivariate, model-based methods for asking neuroscience questions, allowing scientists to investigate multiple hypotheses with a single dataset, to use complex, time-varying stimuli, and to study the human brain under more naturalistic conditions. These tools come in the form of “Encoding” models, in which stimulus features are used to model brain activity, and “Decoding” models, in which neural features are used to generated a stimulus output. Here we review the current state of encoding and decoding models in cognitive electrophysiology and provide a practical guide toward conducting experiments and analyses in this emerging field. Our examples focus on using linear models in the study of human language and audition. We show how to calculate auditory receptive fields from natural sounds as well as how to decode neural recordings to predict speech. The paper aims to be a useful tutorial to these approaches, and a practical introduction to using machine learning and applied statistics to build models of neural activity. The data analytic approaches we discuss may also be applied to other sensory modalities, motor systems, and cognitive systems, and we cover some examples in these areas. In addition, a collection of Jupyter notebooks is publicly available as a complement to the material covered in this paper, providing code examples and tutorials for predictive modeling in python. The aimis to provide a practical understanding of predictivemodeling of human brain data and to propose best-practices in conducting these analyses.},
-	journal = {Frontiers in Systems Neuroscience},
-	author = {Holdgraf, Christopher Ramsay and Rieger, J.W. and Micheli, C. and Martin, S. and Knight, R.T. and Theunissen, F.E.},
-	year = {2017},
-	keywords = {Decoding models, Encoding models, Electrocorticography (ECoG), Electrophysiology/evoked potentials, Machine learning applied to neuroscience, Natural stimuli, Predictive modeling, Tutorials}
+@article{203903Morgan2012,
+  title        = {{X-ray phase imaging with a paper analyzer}},
+  author       = {Morgan, Kaye S. and Paganin, David M. and Siu, Karen K. W.},
+  year         = 2012,
+  month        = {mar},
+  journal      = {Appl. Phys. Lett.},
+  publisher    = {{AIP} Publishing},
+  volume       = 100,
+  number       = 12,
+  pages        = 124102,
+  doi          = {10.1063/1.3694918},
 }
 
-@book{ruby,
-  title     = {The Ruby Programming Language},
-  author    = {Flanagan, David and Matsumoto, Yukihiro},
-  year      = {2008},
-  publisher = {O'Reilly Media}
+@article{Zdora2018a,
+  title        = {{State of the Art of X-ray Speckle-Based Phase-Contrast and Dark-Field Imaging}},
+  author       = {Zdora, Marie-Christine},
+  year         = 2018,
+  journal      = {J. Imaging},
+  volume       = 4,
+  number       = 5,
+  pages        = 60,
+  doi          = {10.3390/jimaging4050060},
 }
