--- a/02_phase_contrast.ipynb
+++ b/02_phase_contrast.ipynb
@@ -31,6 +31,13 @@
    "source": [
     "## X-rays as waves\n",
     "\n",
+    "Good references for this section:\n",
+    "* Detailed treatment of Fourier Optics: Goodman{cite}`Goodman2005`\n",
+    "* The \"bible of optics\": Born & Wolff{cite}`Born1999`\n",
+    "* Chapter 8 of excellent Caltech course notes: Blandford & Thorne{cite}`Blandford2012`\n",
+    "* Transport of intensities: Teague{cite}`Teague1983` and Paganin et al.{cite}`Paganin2006`\n",
+    "* Interesting relationship used for derivation of many results in the Fresnel regime: {cite}`Guigay1977`\n",
+    "\n",
     "Helmholtz (wave) equation can be derived from Maxwell's equations.\n",
     "\n",
     "The solution can be expressed in terms of a self-consistent integral equation involving a Green function, which represent the solution for a point source emitter.\n",
@@ -39,9 +46,7 @@
     "\n",
     "Angular spectrum formulation, Huygens-Fresnel integral\n",
     "\n",
-    "{cite}`Guigay1977`\n",
-    "\n",
-    "Transport of intensities {cite}`Teague1983`\n",
+    "Transport of intensities\n",
     "\n",
     "### X-ray propagation through matter\n",
     "\n",
@@ -49,8 +54,7 @@
     "* Born series\n",
     "* Projection approximation\n",
     "* Rytov series\n",
-    "\n",
-    "{cite}`Goodman2005,Born1999,Paganin2006`"
+    "\n"
    ]
   },
   {
@@ -61,17 +65,13 @@
     "\n",
     "### The Paganin formula\n",
     "\n",
-    "Transport of intensities with a single material assumption\n",
-    "\n",
-    "{cite}`Paganin2002`\n",
+    "Transport of intensities with a single material assumption{cite}`Paganin2002`\n",
     "\n",
     "### In-line holography\n",
     "\n",
-    "Digital Inline\n",
+    "Digital Inline holography (e.g. for soft X-ray microscopy at BESSY{cite}`Rosenhahn2009`\n",
     "\n",
-    "Linearization of transmittance function -> contrast transfer function formalism \n",
-    "\n",
-    "{cite}`Cloetens1999,Rosenhahn2009`\n"
+    "Linearization of transmittance function -> contrast transfer function formalism{cite}`Cloetens1999`\n"
    ]
   },
   {
