--- a/references.bib
+++ b/references.bib
@@ -137,7 +137,7 @@
   doi          = {10.1103/physrevlett.108.158102},
 }
 
-@article{203903Morgan2012,
+@article{Morgan2012,
   title        = {{X-ray phase imaging with a paper analyzer}},
   author       = {Morgan, Kaye S. and Paganin, David M. and Siu, Karen K. W.},
   year         = 2012,
@@ -159,4 +159,13 @@
   number       = 5,
   pages        = 60,
   doi          = {10.3390/jimaging4050060},
+}
+
+@article{Blandford2012,
+  title={Applications of classical physics},
+  author={Blandford, Roger D and Thorne, Kip S},
+  journal={lecture notes, California Institute of Technology},
+  url = {http://www.pmaweb.caltech.edu/Courses/ph136/yr2012/},
+  doi={10.1142/9781860945359_0007},
+  year={2012}
 }
