some more references

--- a/05_tomography.ipynb
+++ b/05_tomography.ipynb
@@ -22,14 +22,19 @@
    "source": [
     "# X-ray tomography\n",
     "\n",
-    "Reconstructing three-dimensional densities from multiple measurements"
+    "Reconstructing three-dimensional densities from multiple measurementsn"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##"
+    "##\n",
+    "Some references:\n",
+    " * Introductory level: Kak & Slaney {cite}`Kak2001`\n",
+    " * Advanced mathematical treatment (a bit old): Natterer {cite}`Natterer1986`\n",
+    " * Industrial applications: De Chiffre{cite}`DeChiffre2014`\n",
+    " *"
    ]
   },
   {
