--- a/references.bib
+++ b/references.bib
@@ -169,3 +169,29 @@
   doi={10.1142/9781860945359_0007},
   year={2012}
 }
+
+@article{DeChiffre2014,
+title={Industrial applications of computed tomography},
+author={De Chiffre, L. and Carmignato, S. and Kruth, J.-P. and Schmitt, R. and Weckenmann, A.},
+journal={CIRP Annals},
+volume={63},
+ISSN={0007-8506},
+DOI={10.1016/j.cirp.2014.05.011},
+number={2},
+year={2014},
+pages={655–677}
+}
+
+@book{Kak2001,
+  title={Principles of computerized tomographic imaging},
+  author={Kak, Avinash C and Slaney, Malcolm},
+  year={2001},
+  publisher={SIAM}
+}
+
+@book{Natterer1986,
+  title={The mathematics of computerized tomography},
+  author={Natterer, Frank},
+  year={1986},
+  publisher={SIAM}
+}
